--- a/app/src/main/res/layout/clientcountryxml.xml
+++ b/app/src/main/res/layout/clientcountryxml.xml
@@ -12,43 +12,133 @@
     app:cardCornerRadius="15dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardCornerRadius="10dp"
         tools:ignore="MissingConstraints"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:background="#F3F3F5"
         >
-
-        <TextView
-            android:id="@+id/clientName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="25dp"
-            android:layout_marginLeft="100dp"
-            android:textSize="16dp"
-            android:textStyle="normal"
-            android:textColor="#092C4C"
-            />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/clientImage"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="25dp"
-            android:layout_marginLeft="15dp"
+            android:src="@drawable/png_peop"
+            android:layout_marginStart="15dp"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
             app:shapeAppearanceOverlay="@style/SpecificCornerRounded"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/clientName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:textSize="16sp"
+            android:fontFamily="@font/avenir"
+            android:textStyle="normal"
+            android:textColor="#092C4C"
+            android:layout_marginStart="8dp"
+            app:layout_constraintVertical_bias="0.1"
+            app:layout_constraintTop_toTopOf="@id/clientImage"
+            app:layout_constraintStart_toEndOf="@id/clientImage"
+            app:layout_constraintBottom_toBottomOf="@id/clientImage"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+91 7905845935"
+            android:textSize="12sp"
+            android:fontFamily="@font/avenir"
+            android:textStyle="normal"
+            android:textColor="#95959D"
+            android:layout_marginStart="8dp"
+            app:layout_constraintVertical_bias="0.62"
+            app:layout_constraintTop_toTopOf="@id/clientImage"
+            app:layout_constraintStart_toEndOf="@id/clientImage"
+            app:layout_constraintBottom_toBottomOf="@id/clientImage"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mumbai,India"
+            android:textSize="12sp"
+            android:fontFamily="@font/avenir"
+            android:textStyle="normal"
+            android:textColor="#95959D"
+            android:layout_marginStart="8dp"
+            app:layout_constraintVertical_bias="1"
+            app:layout_constraintTop_toTopOf="@id/clientImage"
+            app:layout_constraintStart_toEndOf="@id/clientImage"
+            app:layout_constraintBottom_toBottomOf="@id/clientImage"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/png_phone_call"
+            android:layout_marginStart="15dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            app:layout_constraintHorizontal_bias="0.78"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/png_whatsappp"
+            android:layout_marginStart="15dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            app:layout_constraintHorizontal_bias="0.85"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+         <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/png_msg"
+            android:layout_marginStart="15dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            app:layout_constraintHorizontal_bias="0.92"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+        <ImageView
+            android:layout_width="22dp"
+            android:layout_height="110dp"
+            android:src="@drawable/png_rectangle"
+            android:layout_marginStart="15dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/forword_arrow"
+            app:tint="@color/white"
+            android:layout_marginStart="15dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
