--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".DashBoard.DashBoard.AdminDashBoard.NavigationFragment.TodoFragment">
 
@@ -16,8 +17,8 @@
         android:textColor="@color/black"
         android:layout_marginHorizontal="25dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"/>
     <TextView
         android:id="@+id/today_task"
         android:layout_width="wrap_content"
@@ -29,8 +30,7 @@
         android:textSize="22sp"
         android:textColor="@color/black"
         android:layout_marginHorizontal="25dp"
-        app:layout_constraintTop_toBottomOf="@id/task_date"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:layout_below="@id/task_date"/>
 
 
     <ImageView
@@ -38,17 +38,16 @@
         android:layout_height="30dp"
         android:src="@drawable/png_timer"
         android:layout_marginEnd="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/today_task"
-        app:layout_constraintBottom_toBottomOf="@id/today_task"/>
+        android:layout_below="@id/task_date"
+        android:layout_alignParentEnd="true"/>
     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/png_check"
         android:layout_marginEnd="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/today_task"
-        app:layout_constraintBottom_toBottomOf="@id/today_task"/>
+        android:layout_marginTop="2dp"
+        android:layout_below="@id/task_date"
+        android:layout_alignParentEnd="true"/>
 
     <RelativeLayout
         android:id="@+id/relativ_task"
@@ -60,10 +59,7 @@
         android:layout_marginBottom="15dp"
         android:background="@drawable/round_low"
         android:padding="10dp"
-        app:layout_constraintHorizontal_bias="0.03"
-        app:layout_constraintTop_toBottomOf="@id/today_task"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:layout_below="@id/today_task">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -96,9 +92,9 @@
         android:textSize="14sp"
         android:textColor="@color/black"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="2dp"
-        app:layout_constraintTop_toBottomOf="@id/relativ_task"
-        app:layout_constraintStart_toStartOf="@id/relativ_task"/>
+        android:layout_marginStart="20dp"
+        android:layout_below="@id/relativ_task"
+        android:layout_alignParentStart="true"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -109,20 +105,22 @@
         android:max="100"
         android:progress="35"
         android:minHeight="50dp"
-        android:layout_marginStart="5dp"
-        app:layout_constraintTop_toBottomOf="@id/total_task"
-        app:layout_constraintStart_toStartOf="@id/total_task"
+        android:layout_marginStart="25dp"
         android:minWidth="350dp"
         android:progressBackgroundTint="@android:color/darker_gray"
-        android:progressTint="@color/sky_blue" />
+        android:progressTint="@color/sky_blue"
+        android:layout_below="@id/total_task"
+        android:layout_alignParentStart="true"/>
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_todo"
         android:layout_width="100dp"
         android:layout_height="60dp"
-        android:layout_marginTop="@dimen/margin_10"
-        app:layout_constraintTop_toBottomOf="@id/progressBar"
-        app:layout_constraintStart_toStartOf="@id/total_task">
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="25dp"
+        android:layout_below="@id/progressBar"
+        android:layout_alignParentStart="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -165,10 +163,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="100dp"
         android:layout_height="60dp"
+        android:layout_marginTop="15dp"
         android:layout_marginStart="15dp"
-        app:layout_constraintStart_toEndOf="@id/card_todo"
-        app:layout_constraintTop_toTopOf="@id/card_todo"
-        app:layout_constraintBottom_toBottomOf="@id/card_todo">
+        android:layout_below="@id/progressBar"
+        android:layout_toEndOf="@id/card_todo">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -220,9 +218,8 @@
         android:layout_marginTop="20dp"
         android:textSize="22sp"
         android:textColor="@color/black"
-        android:layout_marginHorizontal="4dp"
-        app:layout_constraintTop_toBottomOf="@id/card_todo"
-        app:layout_constraintStart_toStartOf="@id/card_todo"/>
+        android:layout_marginHorizontal="24dp"
+        android:layout_below="@id/card_todo"/>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
@@ -232,18 +229,14 @@
         style="@style/TabLayout"
         app:tabSelectedTextColor="@color/sky_blue"
         app:tabTextColor="@color/add_details"
-        app:layout_constraintStart_toStartOf="parent"
         app:tabTextAppearance="@style/TabLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/my_task"/>
+        android:layout_below="@id/my_task"/>
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager_task"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/tabs"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_below="@id/tabs"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
